# data-agent-cloud

./: .gitignore  ISSUES.md  TECHNICAL.md  pyproject.toml  requirements.txt
backend/: agent.py  dimension.py  export.py  main.py  report.py  tools.py
frontend/: app.py  style.css
