[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.6",
    "langchain-openai>=1.3.3",
    "langchain-core>=0.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.0",
    "numpy>=1.24.0",
    "streamlit>=1.58.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
